gitops/apps/rhcl-demo/base/resources/33-httproute-oidc.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: demo
  labels:
    app: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-gw
      namespace: openshift-ingress
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - group: ""
          kind: Service
          name: keycloak
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: secure-demo
  namespace: demo
  labels:
    app: secure-demo
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-gw
      namespace: openshift-ingress
  rules:
    - matches:
        - method: GET
          path:
            type: PathPrefix
            value: /secure
      backendRefs:
        - group: ""
          kind: Service
          name: secure-echo
          port: 80
          weight: 1
